next chapter - basics section created

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,7 @@ book:
     - index.qmd
     - intro.qmd
     - r-rstudio.qmd
-    - summary.qmd
+    - basics.qmd
     - references.qmd
 
 bibliography: references.bib
