--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ book:
     - intro.qmd
     - r-rstudio.qmd
     - basics.qmd
+    #- intro-github.qmd
     - references.qmd
 
 bibliography: references.bib
