--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,19 +8,27 @@ book:
   chapters:
     - index.qmd
     - intro.qmd
-    - r-rstudio.qmd
-    - basics.qmd
-    - data-types.qmd
-    - fns.qmd
-    - data-structure.qmd
-    - packages.qmd
-    - workflow.qmd
-    - intro-github.qmd
-    - importing-data.qmd
-    - data-manip.qmd
-    - edaI.qmd
-    - edaII.qmd
-    - quarto.qmd
+    - part: the-basics.qmd
+      chapters:
+        - r-rstudio.qmd
+        - operators.qmd
+        - data-types.qmd
+        - fns.qmd
+        - data-structure.qmd
+        - packages.qmd
+        - workflow.qmd
+    - part: wrangle.qmd
+      chapters: 
+        - importing-data.qmd
+        - data-manip.qmd
+    - part: eda.qmd
+      chapters: 
+        - edaI.qmd
+        - edaII.qmd
+    - part: com-col.qmd
+      chpaters:
+        - intro-github.qmd
+        - quarto.qmd
     - references.qmd
   favicon: cover.png
   page-footer:
