--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -24,16 +24,16 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Restore R dependencies
-        run: |
-          Rscript -e 'if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")'
-          Rscript -e 'renv::restore()'
-
       - name: Install dependencies
         run: |
           Rscript -e 'install.packages("quarto")'
           Rscript -e 'install.packages("remotes)'
           Rscript -e 'remotes::install_deps()'
+
+      - name: Restore R dependencies
+        run: |
+          Rscript -e 'if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")'
+          Rscript -e 'renv::status()'
 
       - name: Render book
         run: |
