--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -25,24 +25,17 @@ jobs:
         uses: r-lib/actions/setup-r@v2
 
       - name: Install dependencies
-        run: |
-          Rscript -e 'install.packages("quarto")'
-          Rscript -e 'install.packages("remotes)'
-          Rscript -e 'remotes::install_deps()'
-
-      - name: Restore R dependencies
-        run: |
-          Rscript -e 'if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")'
-          Rscript -e 'renv::status()'
+      - uses: r-lib/actions/setup-r-dependencies@v2
 
       - name: Render book
         run: |
           quarto render
           
       - name: Deploy rendered files to Netlify branch
+        uses: nwtgck/actions-netlify@v1.1
         run: |
           git config -- user.name "github-actions"
           git config --local user.email "github-actions@github.com"
-          git add _site
+          git add _book
           git commit -m "Automated book render"
           git push origin main
