--- a/.github/workflows/build-deploy-netlify.yml
+++ b/.github/workflows/build-deploy-netlify.yml
@@ -25,7 +25,7 @@ jobs:
         uses: r-lib/actions/setup-r@v2
 
       - name: Install dependencies
-      - uses: r-lib/actions/setup-r-dependencies@v2
+        uses: r-lib/actions/setup-r-dependencies@v2
 
       - name: Render book
         run: |
