--- a/.github/workflows/build-deploy-netlify.yml
+++ b/.github/workflows/build-deploy-netlify.yml
@@ -24,8 +24,9 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install dependencies
-        uses: r-lib/actions/setup-r-dependencies@v2
+       - name: Install necessary R packages
+         run: |
+          Rscript -e 'install.packages(c("quarto", "car", "tidyverse", "pysch", "janitor", "stats4nr", "ggthemes", "TukeyC"))'
 
       - name: Render book
         run: |
