--- a/.github/workflows/build-deploy-netlify.yml
+++ b/.github/workflows/build-deploy-netlify.yml
@@ -1,4 +1,4 @@
-name: Quarto Publish
+name: Quarto Blog Auto-Render and Deploy
 
 on:
   push:
@@ -16,26 +16,25 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
-        with:
-          version: "1.5.57"
-
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-       - name: Install necessary R packages
-         run: |
-          Rscript -e 'install.packages(c("quarto", "car", "tidyverse", "pysch", "janitor", "stats4nr", "ggthemes", "TukeyC"))'
+      - name: Install necessary R packages
+        run: |
+          Rscript -e 'install.packages(c("quarto", "car", "tidyverse", "psych", "janitor", "stats4nr", "ggthemes", "TukeyC"))'
 
-      - name: Render book
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          version: "1.5.57"  # Replace with the latest stable version of Quarto
+
+      - name: Render Quarto site
+        run: quarto render
+
+      - name: Push rendered site to deployment branch
         run: |
-          quarto render
-          
-      - name: Deploy rendered files to Netlify branch
-        run: |
-          git config -- user.name "github-actions"
+          git config --local user.name "github-actions"
           git config --local user.email "github-actions@github.com"
-          git add _book
-          git commit -m "Automated book render"
+          git add _site
+          git commit -m "Automated site render"
           git push origin main
