--- a/.github/workflows/build-deploy-netlify.yml
+++ b/.github/workflows/build-deploy-netlify.yml
@@ -14,6 +14,8 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+     env:
+      GITHUB_PAT: ${{ secrets.GH_TOKEN }}
 
     steps:
       - name: Checkout repository
@@ -42,9 +44,13 @@ jobs:
         run: quarto render
 
       - name: Commit and push changes
-        run: |
-          git config --local user.name "github-actions"
-          git config --local user.email "github-actions@github.com"
-          git add -f _book  # Force add the rendered book
-          git commit -m "Automated site render" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/xrander/r4r.git HEAD:main
+        id: netlify-deploy
+        uses: nwtgck/actions-netlify@v1.1
+        with:
+          publish-dir: './_book'
+          production-branch: main
+          github-token: ${{ secrets.GH_TOKEN }}
+          deploy_message:
+            "Automated site render"
+          enable-pull-request-comment: false
+          enable-commit-comment: false
