Table of Contents update.
Data visualization with ggplot2 added

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,7 @@ book:
         - data-manip.qmd
     - part: eda.qmd
       chapters: 
+        - viz-basic.qmd
         - edaI.qmd
         - edaII.qmd
     - part: com-col.qmd
