functions sections updated

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -61,6 +61,7 @@ format:
     number-sections: true
     title-prefix: "Chapter "
     page-layout: full
+    lightbox: true
     
     author-meta: "Olamide M. Adu"
     
